Added testing automation.

--- a/src/Makefile
+++ b/src/Makefile
@@ -5,8 +5,16 @@ OBJ_COPY=riscv64-unknown-linux-gnu-objcopy
 CC=g++
 CFLAGS=-std=c++17 -ggdb -Wall -Werror -Wextra -Wshadow -Wswitch-default -Wswitch-enum -Wconversion -Wunreachable-code 
 
-emu: main.o VEmu.o InstructionDecoder.o Instruction.o DRAM.o Bus.o util.o RegFile.o
-	$(CC) $(CFLAGS) -o emu main.o VEmu.o InstructionDecoder.o Instruction.o DRAM.o Bus.o util.o RegFile.o
+OBJ_FILES = main.o VEmu.o InstructionDecoder.o Instruction.o DRAM.o Bus.o util.o RegFile.o
+
+tests: CFLAGS += -DTEST_ENV
+
+emu: $(OBJ_FILES)
+	$(CC) $(CFLAGS) -o emu $(OBJ_FILES)
+
+tests: $(OBJ_FILES) Tester.o
+	$(CC) $(CFLAGS) -o emu $(OBJ_FILES) Tester.o \
+	&& ./emu
 
 Instruction.o DRAM.o: ../include/defs.h
 
@@ -15,6 +23,9 @@ main.o: main.cpp VEmu.o
 
 VEmu.o: VEmu.cpp ../include/VEmu.h InstructionDecoder.o Bus.o util.o 
 	$(CC) $(CFLAGS) -c VEmu.cpp 
+
+Tester.o: Tester.cpp ../include/Tester.h VEmu.cpp ../include/VEmu.h
+	$(CC) $(CFLAGS) -c Tester.cpp 
 
 InstructionDecoder.o: InstructionDecoder.cpp ../include/InstructionDecoder.h Instruction.o 
 	$(CC) $(CFLAGS) -c InstructionDecoder.cpp 
@@ -43,5 +54,5 @@ code: fib.c
 clean:
 	rm -f code code.bin *.o emu
 
-.PHONY: clean emu 
+.PHONY: clean emu tests
 
