CMakesLists: Added FRegFile to the source files to build.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,7 @@ set(SRC_FILES
     src/DRAM.cpp
     src/Bus.cpp 
     src/RegFile.cpp
+    src/FRegFile.cpp
 )
 
 add_executable(emu ${SRC_FILES})
