--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(SRC_FILES
     src/Bus.cpp 
     src/RegFile.cpp
     src/FRegFile.cpp
-    src/CLIC.cpp
+        src/CLINT.cpp
     src/PLIC.cpp
     src/UART.cpp
         )
