--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -11,7 +11,19 @@ jobs:
         uses: actions/checkout@v2
       - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
       - run: echo "🖥️ The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
+      - name: Install CMake
+        uses: jwlawson/actions-setup-cmake@v1.9
+        with:
+          cmake-version: '3.16.x'
+      - name: Build the test binary
         run: |
-          ls ${{ github.workspace }}
+          cd ${{ github.workspace }}
+          mkdir build && cd build
+          cmake ..
+          make test_emu -j8
+      - name: Run the test binary
+        run: |
+          cd ${{ github.workspace }}
+          cd build
+          ./test_emu
       - run: echo "🍏 This job's status is ${{ job.status }}."
