Fetch submodules before running CI.

--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -18,6 +18,7 @@ jobs:
       - name: Build the test binary
         run: |
           cd ${{ github.workspace }}
+          git submodule update --init --recursive
           mkdir build && cd build
           cmake ..
           make test_emu -j8
